--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,22 +6,42 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 8px auto;
+  padding-top:8px;
+  padding-bottom:2px;
+
 }
 
 .title {
   background: #e3f4ff;
+  margin:8px;
+  font-size:16px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 8px;
+  margin-top:16px;
+  margin-bottom:16px;
+  margin-left:8px;
+  margin-right: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
+  display:block;  
+  text-align: center;
+  margin: 8px;
+  padding: 8px;
 }
 
 button {
+  display:block;
+  justify-self:center;
   background: white;
   border: 1px solid #eee;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-top:8px;
+  padding-bottom: 8px;
 }
