--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  justify-content:space-between;
+  align-items: center;
 }
 
 .logo {
@@ -10,8 +13,15 @@
   background: white;
   padding: 4px 32px;
 }
+.left-links {
+}
 
+.right-links {
+}
 ul {
+  display:flex;
+  justify-content: space-between;
+  padding-left: 0px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
