--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -4,6 +4,7 @@
   display:flex;
   justify-content:space-between;
   align-items: center;
+  gap:8px;
 }
 
 .logo {
@@ -13,15 +14,12 @@
   background: white;
   padding: 4px 32px;
 }
-.left-links {
-}
 
-.right-links {
-}
 ul {
   display:flex;
-  justify-content: space-between;
-  padding-left: 0px;
+  gap:8px;
+  margin:0px;
+  padding:0px;
   /* this removes the dots on the list items*/
   list-style-type: none;
 }
